Fixed rules panel covering main frame when open.

--- a/styles/style.css
+++ b/styles/style.css
@@ -59,6 +59,11 @@ font-family: 'Lobster Two', cursive;
 	visibility: hidden;
 }
 
+.pad-bottom
+{
+	padding-bottom: 200px;
+}
+
 .note
 {
 	padding: 10px;
@@ -140,7 +145,7 @@ font-family: 'Lobster Two', cursive;
 	right: 0;
 	background: white;
 	width: 100%;
-	max-height: 30%;
+	max-height: 250px;
 	outline: 1px solid black;
 }
 
